# aptos-clone

./: .gitignore  Cargo.toml  README.md  ephemeral_keys.txt  input.json  jwt.txt  nonce.txt  openvm.toml
src/: gen_inputs.rs  gen_nonce.rs  main.rs
