[package]
name = "aptos-clone"
version = "0.1.0"
edition = "2024"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = ["std"] }
openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git" }
openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git" }
openvm-poseidon2-air = { git = "https://github.com/openvm-org/openvm.git" }
base64 = "0.21.0"