[package]
name = "aptos-clone"
version = "0.1.0"
edition = "2025"

[[bin]]
name = "gen_nonce"
path = "src/gen_nonce.rs"

[[bin]]
name = "gen_inputs"
path = "src/gen_inputs.rs"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = ["std"] }
openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git" }
sha2 = "0.10.8"
rand = "0.8.5"
base64 = "0.21.0"
serde_json = "1.0"
